2008-11-30  Till Kamppeter <till.kamppeter@gmail.com>

	* postscript.c: Insert the "%%PageSetup" section directly after
	  the DSC comment header of the page, all page drawing commands
	  must be after the section.

	* postscript.c: Inserted PostScript option settings from pstops
	  were not corrected with custom option settings done on the
	  command line (numerical, string, password).

	* options.c: Small fix for better readability.

	* renderer.c: If there was only one PJL option in the PPD no PJL got
	  added at all (Ubuntu bug #303691).

	* renderer.c: Fixed several bugs in the merging of PJL options.
	  In some cases equal keywords were not found in the two JCL
	  option sets or keywords only differing by the last character
	  were considered equal. Also a command in the first line of the
	  driver's PJL header got dropped.

2008-11-26 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: When a numeric value is out of range, use the default
	  value instead of the closest valid value (i.e. min or max). Do not
	  truncate string options which are longer than allowed, use the
	  default instead. Apply AllowedChars and AllowedRegExp also to
	  Password options.

	  Small bug fix: The generated regular expression for AllowedChars was
	  missing the final '$' and therefore didn't match all cases
	  correctly.

	  Bug fix: Merge JCL options correctly

2008-11-21 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Fixed bug: Setting the page range of an option to
	  multiple ranges (seperated by comma), foomatic-rip was caught in an
	  infinte loop.

	* options.c: Fixed bug: Page ranges were not applied for command line
	  options when processing PostScript files (the renderer wasn't
	  restarted as it should have been).

2008-11-13 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Don't prepend @PJL to JCL options if they already start
	  with @PJL. Unhexify JCL commands.

	* options.c: Handle CustomJCL<option> and ParamCustomJCL<option>.