@@ -27,24 +27,24 @@ information about printer drivers which are free software. The
 technology of this database can also be used for non-free drivers, but
 the database entries have to be published in separate packages
 then. The database can also be run under non-free operating systems
-(as commercial Unixes) as they often use GhostScript and free printer
+(as commercial Unixes) as they often use Ghostscript and free printer
 drivers.
 
 Since most free operating systems (GNU/Linux, *BSD, ...) are
 compatible to Unix, their applications send PostScript to the printer
 queues. Therefore one usually hands over the PostScript directly to a
 PostScript printer (sometimes with some prepended PostScript commands
-for options) or uses GhostScript for generating the data format the
+for options) or uses Ghostscript for generating the data format the
 printer needs. This is done by the printer spooler which also stores
 the data in a spool directory when the printer is still occupied by
 another job, transmits the data to a print server in the network, and
 so on.
 
 The printer drivers for non-PostScript printers are either compiled
-into GhostScript, a plug-in for GhostScript (e. g. IJS drivers), or
+into Ghostscript, a plug-in for Ghostscript (e. g. IJS drivers), or
 they are an extra filter which converts a generic bitmap generated by
-GhostScript into the printer's data format. For this the spooler has
-to call complicated command lines of GhostScript and the extra filter
+Ghostscript into the printer's data format. For this the spooler has
+to call complicated command lines of Ghostscript and the extra filter
 (if needed). The user of a free operating system normally does not see
 these command lines because an installation program takes appropriate
 filter scripts and/or description files from a database and assigns
@@ -101,15 +101,15 @@ used with PPD files downloaded from the OpenPrinting site, with
 manufacturer-supplied PPDs for PostScript printers, and probably with
 other PPD files.
 
-For non-PostScript printers one also needs GhostScript (5.50 or newer,
-ESP GhostScript 7.05.4 or newer highly recommended) and the
+For non-PostScript printers one also needs Ghostscript (5.50 or newer,
+ESP Ghostscript 7.05.4 or newer highly recommended) and the
 appropriate printer driver.
 
-For drivers which have to be compiled into GhostScript ("Execution
-style: GhostScript" on the driver pages on the OpenPrinting site)
-check with "gs -h" whether the driver is in your GhostScript. If not
-you need to compile the driver into your GhostScript or use a
-GhostScript version which already contains it.
+For drivers which have to be compiled into Ghostscript ("Execution
+style: Ghostscript" on the driver pages on the OpenPrinting site)
+check with "gs -h" whether the driver is in your Ghostscript. If not
+you need to compile the driver into your Ghostscript or use a
+Ghostscript version which already contains it.
 
 If the driver page says "Execution style: Uniprint", it is much
 easier, check whether the appropriate ".upp" file is in one of the
@@ -119,7 +119,7 @@ not there already.
 
 The third type of driver is marked with "Execution style: Filter",
 this means, that you have to install a filter executable in addition
-to GhostScript. Check with "which <name of the filter>" whether the
+to Ghostscript. Check with "which <name of the filter>" whether the
 filter is already there, otherwise download and install the
 appropriate package.
 
@@ -178,7 +178,7 @@ supported utilities are "a2ps"
 (http://people.ssh.fi/mtr/genscript/), and "mpage"
 (http://www.mesa.nl/pub/mpage). Recommended is "a2ps" because it
 detects many file types (text, PDF, most image formats) and together
-with ImageMagick (for images) and GNU/ESP/AFPL GhostScript 6.51 or
+with ImageMagick (for images) and GNU/ESP/AFPL Ghostscript 6.51 or
 newer (for PDF) it converts them to PostScript. The other tools
 convert only text files. The tool you have installed is auto-detected
 by foomatic-rip and used automatically if necessary. PPR needs this
